k8s/infrastructure/prometheus/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-external
  namespace: server
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("grafana.mchill.io")
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: forward-auth
          namespace: traefik-external
    - match: Host("prometheus.mchill.io")
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      middlewares:
        - name: forward-auth
          namespace: traefik-external
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-internal
  namespace: server
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("grafana.mchill.lan")
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      middlewares:
        - name: basic-auth
          namespace: traefik-internal
    - match: Host("prometheus.mchill.lan")
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      middlewares:
        - name: basic-auth
          namespace: traefik-internal
